data/rq2/deepseek/intermediate/bzip2/workspace/final_projects/bzip2/translate_by_qwen3_coder/.c2r_bindgen_fns/bzlib_eb6b519f.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn BZ2_bzCompressInit(
        strm: *mut bz_stream,
        blockSize100k: ::core::ffi::c_int,
        verbosity: ::core::ffi::c_int,
        workFactor: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzCompress(strm: *mut bz_stream, action: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzCompressEnd(strm: *mut bz_stream) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzDecompressInit(
        strm: *mut bz_stream,
        verbosity: ::core::ffi::c_int,
        small: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzDecompress(strm: *mut bz_stream) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzDecompressEnd(strm: *mut bz_stream) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzReadOpen(
        bzerror: *mut ::core::ffi::c_int,
        f: *mut FILE,
        verbosity: ::core::ffi::c_int,
        small: ::core::ffi::c_int,
        unused: *mut ::core::ffi::c_void,
        nUnused: ::core::ffi::c_int,
    ) -> *mut BZFILE;
}
unsafe extern "C" {
    pub fn BZ2_bzReadClose(bzerror: *mut ::core::ffi::c_int, b: *mut BZFILE);
}
unsafe extern "C" {
    pub fn BZ2_bzReadGetUnused(
        bzerror: *mut ::core::ffi::c_int,
        b: *mut BZFILE,
        unused: *mut *mut ::core::ffi::c_void,
        nUnused: *mut ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn BZ2_bzRead(
        bzerror: *mut ::core::ffi::c_int,
        b: *mut BZFILE,
        buf: *mut ::core::ffi::c_void,
        len: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzWriteOpen(
        bzerror: *mut ::core::ffi::c_int,
        f: *mut FILE,
        blockSize100k: ::core::ffi::c_int,
        verbosity: ::core::ffi::c_int,
        workFactor: ::core::ffi::c_int,
    ) -> *mut BZFILE;
}
unsafe extern "C" {
    pub fn BZ2_bzWrite(
        bzerror: *mut ::core::ffi::c_int,
        b: *mut BZFILE,
        buf: *mut ::core::ffi::c_void,
        len: ::core::ffi::c_int,
    );
}
unsafe extern "C" {
    pub fn BZ2_bzWriteClose(
        bzerror: *mut ::core::ffi::c_int,
        b: *mut BZFILE,
        abandon: ::core::ffi::c_int,
        nbytes_in: *mut ::core::ffi::c_uint,
        nbytes_out: *mut ::core::ffi::c_uint,
    );
}
unsafe extern "C" {
    pub fn BZ2_bzWriteClose64(
        bzerror: *mut ::core::ffi::c_int,
        b: *mut BZFILE,
        abandon: ::core::ffi::c_int,
        nbytes_in_lo32: *mut ::core::ffi::c_uint,
        nbytes_in_hi32: *mut ::core::ffi::c_uint,
        nbytes_out_lo32: *mut ::core::ffi::c_uint,
        nbytes_out_hi32: *mut ::core::ffi::c_uint,
    );
}
unsafe extern "C" {
    pub fn BZ2_bzBuffToBuffCompress(
        dest: *mut ::core::ffi::c_char,
        destLen: *mut ::core::ffi::c_uint,
        source: *mut ::core::ffi::c_char,
        sourceLen: ::core::ffi::c_uint,
        blockSize100k: ::core::ffi::c_int,
        verbosity: ::core::ffi::c_int,
        workFactor: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzBuffToBuffDecompress(
        dest: *mut ::core::ffi::c_char,
        destLen: *mut ::core::ffi::c_uint,
        source: *mut ::core::ffi::c_char,
        sourceLen: ::core::ffi::c_uint,
        small: ::core::ffi::c_int,
        verbosity: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzlibVersion() -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn BZ2_bzopen(
        path: *const ::core::ffi::c_char,
        mode: *const ::core::ffi::c_char,
    ) -> *mut BZFILE;
}
unsafe extern "C" {
    pub fn BZ2_bzdopen(fd: ::core::ffi::c_int, mode: *const ::core::ffi::c_char) -> *mut BZFILE;
}
unsafe extern "C" {
    pub fn BZ2_bzread(
        b: *mut BZFILE,
        buf: *mut ::core::ffi::c_void,
        len: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzwrite(
        b: *mut BZFILE,
        buf: *mut ::core::ffi::c_void,
        len: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzflush(b: *mut BZFILE) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn BZ2_bzclose(b: *mut BZFILE);
}
unsafe extern "C" {
    pub fn BZ2_bzerror(
        b: *mut BZFILE,
        errnum: *mut ::core::ffi::c_int,
    ) -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn BZ2_bz__AssertH__fail(errcode: ::core::ffi::c_int);
}
